<resources>
    <string name="app_name">Weight Tracker</string>s
    <string name="empty_weight_error">Weight cannot be empty!</string>
    <string name="weight_number_error">Weight must be a number!</string>
    <string name="select_date">Select Date</string>
    <string name="login_description">Enter a username and password to log in or create a new account</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="submit">Submit</string>
    <string name="continue_as_guest"><u>Continue as guest</u></string>
    <string name="date_added_header">Date</string>
    <string name="weight_header">Weight</string>
    <string name="goal_weight">Goal Weight</string>
    <string name="add_weight">add weight</string>
    <string name="sms_notifications">SMS Notifications</string>
    <string name="sign_out">Sign Out</string>
    <string name="sms_description">Automatically send an SMS message when you reach your goal weight.</string>
    <string name="phone_number">Phone number</string>
    <string name="delete_entry">delete entry</string>
    <string name="add_new_weight">Add New Weight</string>
    <string name="date_hint">Date</string>
    <string name="weight_hint">Weight</string>
    <string name="home_menu">Home</string>
    <string name="history_menu">History</string>
    <string name="settings_menu">Settings</string>
    <string name="anonymous_login">anonymous</string>
    <string name="start_weight">Start Weight</string>
    <string name="edit_entry">edit entry</string>
    <string name="edit_weight_label">Edit Weight</string>
    <string name="current_weight">Current Weight</string>
    <string name="set_goal_weight">Set Goal Weight</string>
    <string name="weight_loss_target">Weight Loss Target:</string>
    <string name="weight_loss_so_far">Weight Loss So Far:</string>
    <string name="weight_left_to_lose">Weight Left To Lose:</string>
    <string name="start_date">Start Date:</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="change_goal_weight">Change Goal Weight</string>
</resources>