

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="?attr/bottomSheetStyle">

    <TextView
        android:id="@+id/weight_sheet_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_weight"
        style="?attr/textAppearanceHeadlineLargeEmphasized"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/textInputOutlinedStyle"
        android:hint="@string/weight_hint"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weight_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="?attr/textInputOutlinedStyle"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/date_hint"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/calendar_icon"
        app:endIconContentDescription="Open Date Picker"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:clickable="true"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_weight_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:padding="15dp"/>

</LinearLayout>