<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/current_weight_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="20dp"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_weight"
            android:textAlignment="center"
            style="?attr/textAppearanceHeadlineLarge"/>

        <TextView
            android:id="@+id/current_weight_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            style="?attr/textAppearanceHeadlineLargeEmphasized"/>
    </LinearLayout>

    <me.tankery.lib.circularseekbar.CircularSeekBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        app:cs_start_angle="180"
        app:cs_end_angle="360"
        app:cs_circle_stroke_width="30dp"
        app:cs_disable_pointer="true"
        app:cs_max="100"
        app:cs_hide_progress_when_empty="true"
        app:cs_circle_style= "round"
        app:cs_circle_progress_color="?attr/colorPrimary"
        app:cs_circle_color="?attr/colorPrimaryContainer"
        app:layout_constraintTop_toBottomOf="@id/current_weight_layout"/>

    <TextView
        android:id="@+id/progress_percent_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/textAppearanceHeadline2"
        android:textAlignment="center"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toTopOf="@id/progress_bar"
        app:layout_constraintBottom_toBottomOf="@id/progress_bar"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="@+id/progress_bar"
        app:layout_constraintBottom_toBottomOf="@id/progress_bar"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_weight"
            style="?attr/textAppearanceTitleMedium"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/start_weight_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?attr/textAppearanceTitleMedium"
            android:textAlignment="center"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/goal_weight_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="@+id/progress_bar"
        app:layout_constraintBottom_toBottomOf="@id/progress_bar"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_weight"
            style="?attr/textAppearanceTitleMedium"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/goal_weight_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?attr/textAppearanceTitleMedium"
            android:textAlignment="center"
            />

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/progress_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/goal_weight_layout"
        android:layout_marginTop="10dp"
        app:dividerThickness="2dp"
        app:dividerInsetStart="10dp"
        app:dividerInsetEnd="10dp"
        app:layout_constraintCircleRadius="10dp" />

    <Button
        android:id="@+id/set_goal_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/set_goal_weight"
        android:textSize="24sp"
        android:paddingVertical="10dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/progress_divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/set_goal_button">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="40dp"
            android:paddingTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                style="?attr/textAppearanceTitleLarge"
                android:text="@string/weight_loss_target"/>

            <TextView
                android:id="@+id/target_loss_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                style="?attr/textAppearanceTitleLargeEmphasized" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="40dp"
            android:paddingTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                style="?attr/textAppearanceTitleLarge"
                android:text="@string/weight_loss_so_far"/>

            <TextView
                android:id="@+id/total_loss_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                style="?attr/textAppearanceTitleLargeEmphasized" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="40dp"
            android:paddingTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                style="?attr/textAppearanceTitleLarge"
                android:text="@string/weight_left_to_lose"/>

            <TextView
                android:id="@+id/target_left_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                style="?attr/textAppearanceTitleLargeEmphasized" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="40dp"
            android:paddingTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                style="?attr/textAppearanceTitleLarge"
                android:text="@string/start_date"/>

            <TextView
                android:id="@+id/start_date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                style="?attr/textAppearanceTitleLargeEmphasized" />
        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_weight_fab"
        style="?attr/floatingActionButtonMediumStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/add_weight"
        app:srcCompat="@drawable/add_icon"
        />

</androidx.constraintlayout.widget.ConstraintLayout>